; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_node_protocol.c_CStoreTable.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_node_protocol.c_CStoreTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_9__ = type { i32 }

@RELKIND_FOREIGN_TABLE = common dso_local global i8 0, align 1
@CSTORE_FDW_NAME = common dso_local global i32 0, align 4
@NAMEDATALEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CStoreTable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call signext i8 @get_rel_relkind(i32 %8)
  store i8 %9, i8* %4, align 1
  %10 = load i8, i8* %4, align 1
  %11 = sext i8 %10 to i32
  %12 = load i8, i8* @RELKIND_FOREIGN_TABLE, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %11, %13
  br i1 %14, label %15, label %35

15:                                               ; preds = %1
  %16 = load i32, i32* %2, align 4
  %17 = call %struct.TYPE_7__* @GetForeignTable(i32 %16)
  store %struct.TYPE_7__* %17, %struct.TYPE_7__** %5, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call %struct.TYPE_8__* @GetForeignServer(i32 %20)
  store %struct.TYPE_8__* %21, %struct.TYPE_8__** %6, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call %struct.TYPE_9__* @GetForeignDataWrapper(i32 %24)
  store %struct.TYPE_9__* %25, %struct.TYPE_9__** %7, align 8
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @CSTORE_FDW_NAME, align 4
  %30 = load i32, i32* @NAMEDATALEN, align 4
  %31 = call i64 @strncmp(i32 %28, i32 %29, i32 %30)
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %15
  store i32 1, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %15
  br label %35

35:                                               ; preds = %34, %1
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local signext i8 @get_rel_relkind(i32) #1

declare dso_local %struct.TYPE_7__* @GetForeignTable(i32) #1

declare dso_local %struct.TYPE_8__* @GetForeignServer(i32) #1

declare dso_local %struct.TYPE_9__* @GetForeignDataWrapper(i32) #1

declare dso_local i64 @strncmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
